@@ -7,7 +7,9 @@ var CloudCommander, Util, DOM, $, Github, cb;
     
     var cloudcmd                        = CloudCommander,
         
-        API_URL                         = '/api/v1/auth',
+        APIURL                          = '/api/v1',
+        AuthURL                         = APIURL + '/auth',
+        ClientIdURL                     = APIURL + '/client_id',
         CLIENT_ID,
         Cache                           = DOM.Cache,
         GitHub,
@@ -41,11 +43,21 @@ var CloudCommander, Util, DOM, $, Github, cb;
     }
     
     function setConfig(pCallBack){
+        /*
         cloudcmd.loadConfig(function(){
             var lConfig     = cloudcmd.Config;
             CLIENT_ID       = lConfig.oauth_client_id;
             
             Util.exec(pCallBack);
+        });
+        */
+        
+        DOM.ajax({
+            url     : ClientIdURL,
+            success : function(pData){
+                CLIENT_ID       = pData;
+                Util.exec(pCallBack);
+            }
         });
     }
     
@@ -89,7 +101,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
                 
                 DOM.ajax({
                     type    : 'put',
-                    url     : API_URL,
+                    url     : AuthURL,
                     data: lCode,
                     success: function(pData){
                         if(pData && pData.token){
